# swissknife-sdk

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  README.md
crates/swissknife-ai-sdk/: Cargo.toml
crates/swissknife-ai-sdk/src/: error.rs  lib.rs  registry.rs  tool.rs  types.rs
crates/swissknife-ai-sdk/src/claude_history/: mod.rs  parser.rs
crates/swissknife-ai-sdk/src/llm/: anthropic.rs  deepl.rs  elevenlabs.rs  huggingface.rs  mistral.rs  mod.rs  openai.rs  runway.rs  stability.rs  types.rs  voyage.rs
crates/swissknife-ai-sdk/src/mcp/: handler.rs  host.rs  mod.rs  provider.rs  router.rs  server.rs  types.rs
crates/swissknife-ai-sdk/src/memory/: duckdb.rs  mod.rs  types.rs
crates/swissknife-ai-sdk/src/tools/: mod.rs
crates/swissknife-ai-sdk/tests/: llm_tests.rs  mcp_tests.rs  memory_tests.rs  tool_definition_tests.rs  tool_registry_tests.rs  tool_spec_tests.rs
crates/swissknife-auth-sdk/: Cargo.toml
crates/swissknife-auth-sdk/src/: error.rs  lib.rs
crates/swissknife-auth-sdk/src/api_keys/: mod.rs
crates/swissknife-auth-sdk/src/apple/: mod.rs
crates/swissknife-auth-sdk/src/auth0/: mod.rs
crates/swissknife-auth-sdk/src/clerk/: mod.rs
crates/swissknife-auth-sdk/src/cognito/: mod.rs
crates/swissknife-auth-sdk/src/dpop/: mod.rs
crates/swissknife-auth-sdk/src/facebook/: mod.rs
crates/swissknife-auth-sdk/src/firebase/: mod.rs
crates/swissknife-auth-sdk/src/github/: mod.rs
crates/swissknife-auth-sdk/src/google/: mod.rs
crates/swissknife-auth-sdk/src/introspection/: mod.rs
crates/swissknife-auth-sdk/src/jwks/: mod.rs
crates/swissknife-auth-sdk/src/jwt/: mod.rs
crates/swissknife-auth-sdk/src/keycloak/: mod.rs
crates/swissknife-auth-sdk/src/ldap/: mod.rs
crates/swissknife-auth-sdk/src/magic_link/: mod.rs
crates/swissknife-auth-sdk/src/microsoft/: mod.rs
crates/swissknife-auth-sdk/src/oauth2/: client.rs  mod.rs  pkce.rs  types.rs
crates/swissknife-auth-sdk/src/oidc/: mod.rs
crates/swissknife-auth-sdk/src/okta/: mod.rs
crates/swissknife-auth-sdk/src/paseto/: mod.rs
crates/swissknife-auth-sdk/src/password/: mod.rs
crates/swissknife-auth-sdk/src/rippling/: mod.rs
crates/swissknife-auth-sdk/src/saml/: mod.rs
crates/swissknife-auth-sdk/src/scim/: mod.rs
crates/swissknife-auth-sdk/src/supabase/: mod.rs
crates/swissknife-auth-sdk/src/totp/: mod.rs
crates/swissknife-auth-sdk/src/twitter/: mod.rs
crates/swissknife-auth-sdk/src/webauthn/: mod.rs
crates/swissknife-auth-sdk/tests/: api_keys_tests.rs  jwt_tests.rs  oauth2_tests.rs  password_tests.rs  totp_tests.rs
crates/swissknife-automation-sdk/: Cargo.toml
crates/swissknife-automation-sdk/src/: error.rs  lib.rs
crates/swissknife-automation-sdk/src/make/: mod.rs
crates/swissknife-automation-sdk/src/n8n/: mod.rs
crates/swissknife-automation-sdk/src/pipedream/: mod.rs
crates/swissknife-automation-sdk/src/tray/: mod.rs
crates/swissknife-banking-sdk/: Cargo.toml
crates/swissknife-banking-sdk/src/: error.rs  lib.rs
crates/swissknife-cli/: Cargo.toml
crates/swissknife-cli/src/: main.rs
crates/swissknife-cloud-sdk/: Cargo.toml
crates/swissknife-cloud-sdk/src/: error.rs  lib.rs
crates/swissknife-cloud-sdk/tests/: bucket_tests.rs  error_tests.rs  list_tests.rs  multipart_tests.rs  object_tests.rs  presign_tests.rs  upload_tests.rs
crates/swissknife-communication-sdk/: Cargo.toml
crates/swissknife-communication-sdk/src/: error.rs  lib.rs
crates/swissknife-communication-sdk/tests/: chat_tests.rs  client_tests.rs  communication_tests.rs  email_tests.rs  error_tests.rs  push_tests.rs  sms_tests.rs  voice_tests.rs  whatsapp_tests.rs
crates/swissknife-crm-sdk/: Cargo.toml
crates/swissknife-crm-sdk/src/: error.rs  lib.rs
crates/swissknife-database-sdk/: Cargo.toml
crates/swissknife-database-sdk/src/: clickhouse.rs  elasticsearch.rs  error.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  supabase.rs
crates/swissknife-database-sdk/tests/: client_tests.rs  document_tests.rs  error_tests.rs  query_tests.rs  search_tests.rs
crates/swissknife-devtools-sdk/: Cargo.toml
crates/swissknife-devtools-sdk/src/: error.rs  lib.rs
crates/swissknife-ecommerce-sdk/: Cargo.toml
crates/swissknife-ecommerce-sdk/src/: error.rs  lib.rs
crates/swissknife-hr-sdk/: Cargo.toml
crates/swissknife-hr-sdk/src/: error.rs  lib.rs
crates/swissknife-memory-sdk/: Cargo.toml
crates/swissknife-memory-sdk/src/: error.rs  lib.rs
crates/swissknife-memory-sdk/tests/: error_tests.rs  mem0_tests.rs  memory_tests.rs  types_tests.rs  zep_tests.rs
crates/swissknife-observability-sdk/: Cargo.toml
crates/swissknife-observability-sdk/src/: error.rs  lib.rs
crates/swissknife-payments-sdk/: Cargo.toml
crates/swissknife-payments-sdk/src/: error.rs  lib.rs
crates/swissknife-pm-sdk/: Cargo.toml
crates/swissknife-pm-sdk/src/: lib.rs
crates/swissknife-productivity-sdk/: Cargo.toml
crates/swissknife-productivity-sdk/src/: error.rs  lib.rs
crates/swissknife-productivity-sdk/tests/: productivity_tests.rs
crates/swissknife-queue-sdk/: Cargo.toml
crates/swissknife-queue-sdk/src/: error.rs  lib.rs
crates/swissknife-queue-sdk/tests/: queue_tests.rs
crates/swissknife-research-sdk/: Cargo.toml
crates/swissknife-research-sdk/src/: error.rs  lib.rs
crates/swissknife-research-sdk/tests/: research_tests.rs
crates/swissknife-scraping-sdk/: Cargo.toml
crates/swissknife-scraping-sdk/src/: error.rs  lib.rs
crates/swissknife-scraping-sdk/tests/: scraping_tests.rs
crates/swissknife-search-sdk/: Cargo.toml
crates/swissknife-search-sdk/src/: ahrefs.rs  apify.rs  duckduckgo.rs  error.rs  exa.rs  firecrawl.rs  google.rs  jina.rs  lib.rs  linkup.rs  perplexity.rs  serper.rs  tavily.rs  wikipedia.rs
crates/swissknife-search-sdk/tests/: client_tests.rs  error_tests.rs  search_tests.rs  serialization_tests.rs  types_tests.rs
crates/swissknife-social-sdk/: Cargo.toml
crates/swissknife-social-sdk/src/: error.rs  lib.rs
crates/swissknife-vectordb-sdk/: Cargo.toml
crates/swissknife-vectordb-sdk/src/: error.rs  lib.rs
(+314 files in other folders)
