[workspace]
resolver = "2"
members = [
    "crates/swissknife-communication-sdk",
    "crates/swissknife-social-sdk",
    "crates/swissknife-auth-sdk",
    "crates/swissknife-payments-sdk",
    "crates/swissknife-crm-sdk",
    "crates/swissknife-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/swissknife-sdk"
authors = ["Alex Choi"]
readme = "README.md"
homepage = "https://github.com/alexchoi0/swissknife-sdk"

[workspace.dependencies]
swissknife-communication-sdk = { path = "crates/swissknife-communication-sdk" }
swissknife-social-sdk = { path = "crates/swissknife-social-sdk" }
swissknife-auth-sdk = { path = "crates/swissknife-auth-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
url = "2.5"
urlencoding = "2.1"
hex = "0.4"
crc32fast = "1.4"
