[package]
name = "swissknife-auth-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Authentication SDK with OAuth, JWT, passwords, MFA, and provider integrations"
keywords = ["auth", "oauth", "jwt", "authentication", "security"]
categories = ["authentication", "web-programming"]

[features]
default = ["oauth2", "jwt", "password", "totp", "api-keys", "providers", "social"]

# Core features
oauth2 = []
jwt = ["dep:jsonwebtoken"]
paseto = ["dep:rusty_paseto", "dep:ed25519-dalek"]
password = ["dep:argon2", "dep:bcrypt", "dep:scrypt", "dep:password-hash"]
totp = ["dep:totp-rs"]
webauthn = ["dep:webauthn-rs"]
magic-link = []
api-keys = []

# OAuth 2.0 extensions
oidc = ["jwt", "dep:tokio"]
jwks = ["jwt", "dep:tokio"]
introspection = ["dep:tokio"]
dpop = ["jwt"]

# Enterprise SSO
saml = ["dep:flate2"]
ldap = []
scim = []
enterprise-sso = ["saml", "ldap", "scim"]

# Provider bundle
providers = ["auth0", "firebase-auth", "okta", "cognito", "keycloak", "supabase", "clerk", "rippling"]
auth0 = ["oauth2", "jwt"]
firebase-auth = ["jwt"]
okta = ["oauth2", "jwt"]
cognito = ["oauth2", "jwt"]
keycloak = ["oauth2", "jwt"]
supabase = ["jwt"]
clerk = ["jwt"]
rippling = ["oauth2"]

# Social login bundle
social = ["google", "apple", "github", "microsoft", "facebook", "twitter-auth"]
google = ["oauth2", "jwt"]
apple = ["oauth2", "jwt"]
github = ["oauth2"]
microsoft = ["oauth2", "jwt"]
facebook = ["oauth2"]
twitter-auth = ["oauth2"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

# JWT
jsonwebtoken = { version = "9.3", optional = true }

# Paseto
rusty_paseto = { version = "0.7", optional = true }
ed25519-dalek = { version = "2.2", optional = true }

# Async
tokio = { version = "1", features = ["sync"], optional = true }

# Password hashing
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.16", optional = true }
scrypt = { version = "0.11", optional = true }
password-hash = { version = "0.5", optional = true }

# TOTP
totp-rs = { version = "5.6", features = ["gen_secret", "qr"], optional = true }

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"], optional = true }

# SAML
flate2 = { version = "1.0", optional = true }

# Utilities
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
