[package]
name = "swissknife-cloud-sdk"
version = "0.1.0"
edition = "2021"
description = "Cloud storage SDK - AWS S3, Google Cloud Storage, Azure Blob, Dropbox"
license = "MIT"

[features]
default = []
full = ["s3", "gcs", "azure", "dropbox", "cloudflare"]
s3 = []
gcs = []
azure = []
dropbox = []
cloudflare = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
