[package]
name = "swissknife-communication-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Communication SDK with SMS, Voice, WhatsApp, Email, and Push notifications"
keywords = ["sms", "twilio", "sendgrid", "push-notifications", "messaging"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["twilio", "sendgrid", "fcm", "apns", "slack", "discord", "telegram", "communication"]
full = ["twilio", "sendgrid", "fcm", "apns", "slack", "discord", "telegram", "gmail", "mailgun", "mailchimp", "resend", "intercom", "teams", "outlook", "smtp", "communication"]
communication = ["sms", "voice", "whatsapp", "email", "push", "chat"]
sms = []
voice = []
whatsapp = []
email = []
push = []
chat = []
twilio = []
sendgrid = []
fcm = []
apns = []
slack = []
discord = []
telegram = []
gmail = []
mailgun = []
mailchimp = []
resend = []
intercom = []
teams = []
outlook = []
smtp = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
