[package]
name = "swissknife-crm-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "CRM SDK with Salesforce, HubSpot, Pipedrive, Zoho, and Zendesk Sell support"
keywords = ["crm", "salesforce", "hubspot", "pipedrive", "zendesk"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["salesforce", "hubspot", "pipedrive", "zoho", "zendesk"]
full = ["salesforce", "hubspot", "pipedrive", "zoho", "zendesk", "apollo", "hunter", "clay", "wealthbox"]
salesforce = []
hubspot = []
pipedrive = []
zoho = []
zendesk = []
apollo = []
hunter = []
clay = []
wealthbox = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
