[package]
name = "swissknife-database-sdk"
version.workspace = true
edition = "2021"
description = "Database SDK - PostgreSQL, MySQL, MongoDB, Redis, Elasticsearch, Supabase, DynamoDB, Neo4j, RDS"
license = "MIT"

[features]
default = []
full = ["postgres", "mysql", "mongodb", "redis", "elasticsearch", "supabase", "clickhouse", "dynamodb", "neo4j", "rds"]
postgres = []
mysql = []
mongodb = []
redis = []
elasticsearch = []
supabase = []
clickhouse = []
dynamodb = []
neo4j = []
rds = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
