[package]
name = "swissknife-ecommerce-sdk"
version.workspace = true
edition = "2021"
description = "E-commerce SDK - Shopify, WooCommerce, BigCommerce"
license = "MIT"

[features]
default = []
full = ["shopify", "woocommerce", "bigcommerce"]
shopify = []
woocommerce = []
bigcommerce = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
