[package]
name = "swissknife-observability-sdk"
version.workspace = true
edition = "2021"
description = "Observability SDK - Datadog, PostHog, Sentry, Grafana, Mixpanel, incident.io"
license = "MIT"

[features]
default = []
full = ["datadog", "posthog", "sentry", "grafana", "mixpanel", "amplitude", "incidentio"]
datadog = []
posthog = []
sentry = []
grafana = []
mixpanel = []
amplitude = []
incidentio = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
