[package]
name = "swissknife-pm-sdk"
version.workspace = true
edition = "2021"
description = "Project management SDK - Linear, Jira, Asana, Trello, ClickUp"
license = "MIT"

[features]
default = []
full = ["linear", "jira", "asana", "trello", "clickup"]
linear = []
jira = []
asana = []
trello = []
clickup = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
