[package]
name = "swissknife-queue-sdk"
version.workspace = true
edition = "2021"
description = "Message queue SDK - Amazon SQS, Apache Kafka"
license = "MIT"

[features]
default = []
full = ["sqs", "kafka"]
sqs = []
kafka = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
quick-xml = { version = "0.36", features = ["serialize"] }
urlencoding = "2.1"
