[package]
name = "swissknife-research-sdk"
version.workspace = true
edition = "2021"
description = "Research SDK - ArXiv, academic papers, scholarly data"
license = "MIT"

[features]
default = []
full = ["arxiv"]
arxiv = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
