[package]
name = "swissknife-scraping-sdk"
version.workspace = true
edition = "2021"
description = "Web scraping SDK - Apify, Browser Use, Firecrawl"
license = "MIT"

[features]
default = []
full = ["apify", "browseruse", "firecrawl"]
apify = []
browseruse = []
firecrawl = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
