[package]
name = "swissknife-social-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Social media SDK with Instagram, Facebook, TikTok, Twitter/X, and LinkedIn support"
keywords = ["social-media", "instagram", "facebook", "twitter", "linkedin"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["instagram", "facebook", "tiktok", "twitter", "linkedin", "social"]
full = ["instagram", "facebook", "tiktok", "twitter", "linkedin", "reddit", "spotify", "youtube", "social"]
social = []
instagram = []
facebook = []
tiktok = []
twitter = []
linkedin = []
reddit = []
spotify = []
youtube = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
