[package]
name = "swissknife-vectordb-sdk"
version = "0.1.0"
edition = "2021"
description = "Vector database SDK - Pinecone, Qdrant, Weaviate, Chroma, Milvus"
license = "MIT"

[features]
default = []
full = ["pinecone", "qdrant", "weaviate", "chroma", "milvus"]
pinecone = []
qdrant = []
weaviate = []
chroma = []
milvus = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
